--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                      <p class="place__url-heading">URL</p>
                      <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
-                <img class="place__images" src="./images/__image1.jpg" alt="Лес и вода">
+                <img class="place__image" src="./images/__image1.jpg" alt="Лес и вода">
                  <div>
                     <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; 
                     спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная
@@ -78,7 +78,7 @@
                      <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">
                          National Geographic</a>
                 </div>
-                <img class="place__images" src="./images/__image2.jpg" alt="Заснеженные горы">
+                <img class="place__image" src="./images/__image2.jpg" alt="Заснеженные горы">
                  <div>
                     <p class="place__paragraph">Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская тундра, от&nbsp;которой 
                         на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -96,7 +96,7 @@
                      <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">
                         Facebook</a>
                 </div>
-                <img class="place__images" src="./images/__image3.jpg" alt="Ноутбук на фоне смешанного лестного массива">
+                <img class="place__image" src="./images/__image3.jpg" alt="Ноутбук на фоне смешанного лестного массива">
                  <div>
                     <p class="place__paragraph">Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. 
                         В&nbsp;первую очередь из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны, усыпанные соснами, горные реки 
@@ -113,7 +113,7 @@
                      <p class="place__url-heading">URL</p>
                      <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
-                <img class="place__images" src="./images/__image4.jpg" alt="Потрескавшийся лёд">
+                <img class="place__image" src="./images/__image4.jpg" alt="Потрескавшийся лёд">
                  <div>
                     <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также знают, что это самый большой 
                         источник пресной воды и&nbsp;одно из&nbsp;красивейших мест в&nbsp;России.</p>
@@ -129,7 +129,7 @@
                      <p class="place__url-heading">URL</p>
                      <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
-                <img class="place__images" src="./images/__image5.jpg" alt="Озеро в лесу">
+                <img class="place__image" src="./images/__image5.jpg" alt="Озеро в лесу">
                  <div>
                     <p class="place__paragraph">Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская 
                         лиственница не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса 
@@ -140,13 +140,6 @@
                 </div>
             </div>
         </section>
-        <!--<section class="cover">
-            <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-                <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала 
-                    на&nbsp;электричках.</p>
-            </a>
-        </section>-->
         <section class="cover">
             <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                 <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
@@ -156,17 +149,19 @@
         </section>
         <footer class="footer">
             <ul class="footer__links">
-                <li class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</li>
-                <li class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</li>
-                <li class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</li>
-                <li class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</li>
-                <li class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</li>
+                <li class="footer__link"><a class="footer__link footer__link_decoration-none" href="https://yandex.ru/maps" target="_blank">
+                    Карты</a></li>
+                <li class="footer__link"><a class="footer__link footer__link_decoration-none" href="https://yandex.ru/pogoda" target="_blank">
+                    Погода</a></li>
+                <li class="footer__link"><a class="footer__link footer__link_decoration-none" href="https://rasp.yandex.ru" target="_blank">
+                    Расписание</a></li>
+                <li class="footer__link"><a class="footer__link footer__link_decoration-none" href="https://calendar.yandex.ru" target="_blank">
+                    Календарь</a></li>
+                <li class="footer__link"><a class="footer__link footer__link_decoration-none" href="https://travel.yandex.ru" target="_blank">
+                    Путешествия</a></li>
             </ul>
             <p class="footer__copyright">&#169;2022, Александр Удалов</p>
         </footer>
-
-
     </div>
-    
 </body>
 </html>
