--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
         <header class="header">
             <img class="header__logo" src="./images/__logo.svg" alt="Логотип в виде карты России">
-            <div class="header__lang-link">
+            <div class="header__lang-links">
                 <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
                 <a href="#" class="header__lang-link">En</a>
             </div>
